# knot

./: .gitignore  README.md  index.html  package-lock.json  package.json  prompt.md  tsconfig.json  vite.config.js
mock/: app.js  index.html  package.json  server.js  styles.css  v1.html  v2.html  v3.html  v4.html  v5.html
src/: main.js  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: keybind_model.rs  mod.rs
src-tauri/src/event/: mod.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/keybind/: engine.rs
src-tauri/src/pty/: manager.rs  session.rs
src-tauri/src/workspace/: manager.rs  model.rs
src/state/: app-state.js  app-state.ts
src/styles/: main.css
src/terminal/: terminal-manager.js  terminal-manager.ts
src/ui/: command-palette.js  command-palette.ts  keybind-handler.js  keybind-handler.ts  renderer.js  renderer.ts
