[package]
name = "knot"
version = "0.1.0"
edition = "2024"
description = "Terminal workspace manager for parallel development"
license = "MIT"
repository = "https://github.com/Snowy7/knot"

[lib]
name = "knot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
notify = "7"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
thiserror = "2"
chrono = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
